--- a/hospital-management-web/pom.xml
+++ b/hospital-management-web/pom.xml
@@ -4,16 +4,24 @@
 	<groupId>com.dev</groupId>
 	<artifactId>hospital-management-web</artifactId>
 	<packaging>war</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>hospital-management-web Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
 		<jsf-version>2.2.14</jsf-version>
 		<spring-version>4.3.8.RELEASE</spring-version>
+		<hospital-management-version>1.0.0-SNAPSHOT</hospital-management-version>
 	</properties>
 
 	<dependencies>
+	
+		<dependency>
+			<groupId>com.dev</groupId>
+			<artifactId>hospital-management-data</artifactId>
+			<version>${hospital-management-version}</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
