--- a/hospital-management-web/pom.xml
+++ b/hospital-management-web/pom.xml
@@ -9,9 +9,10 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<jsf-version>2.2.14</jsf-version>
-		<spring-version>4.3.8.RELEASE</spring-version>
-		<hospital-management-version>1.0.0-SNAPSHOT</hospital-management-version>
+		<hospital.management.version>1.0.0-SNAPSHOT</hospital.management.version>
+		<jsf.version>2.2.14</jsf.version>
+		<primefaces.version>6.1</primefaces.version>
+		<spring.version>4.3.8.RELEASE</spring.version>
 	</properties>
 
 	<dependencies>
@@ -19,37 +20,51 @@
 		<dependency>
 			<groupId>com.dev</groupId>
 			<artifactId>hospital-management-data</artifactId>
-			<version>${hospital-management-version}</version>
+			<version>${hospital.management.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
-			<version>${jsf-version}</version>
+			<version>${jsf.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-impl</artifactId>
-			<version>${jsf-version}</version>
+			<version>${jsf.version}</version>
 		</dependency>
-
+		
+		<dependency>
+		    <groupId>org.primefaces</groupId>
+		    <artifactId>primefaces</artifactId>
+		    <version>${primefaces.version}</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>3.0.1</version>
+		    <scope>provided</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>${spring-version}</version>
+			<version>${spring.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>${spring-version}</version>
+			<version>${spring.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>${spring-version}</version>
+			<version>${spring.version}</version>
 		</dependency>
 		
 		<dependency>
