--- a/hospital-management-web/src/main/webapp/WEB-INF/web.xml
+++ b/hospital-management-web/src/main/webapp/WEB-INF/web.xml
@@ -56,7 +56,7 @@
 	</servlet-mapping>
 	
 	<welcome-file-list>
-		<welcome-file>home.xhtml</welcome-file>
+		<welcome-file>welcome.xhtml</welcome-file>
 	</welcome-file-list>
 	
 </web-app>
