--- a/hospital-management-data/src/main/resources/db.properties
+++ b/hospital-management-data/src/main/resources/db.properties
@@ -6,6 +6,6 @@ db.password=root
 
 #Hibernate
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=validate
 hibernate.show_sql=true
 hibernate.batch.size=20
