Split user Pojo in another project for code reusability.

--- a/hospital-management-web/pom.xml
+++ b/hospital-management-web/pom.xml
@@ -26,7 +26,7 @@
 	
 		<dependency>
 			<groupId>com.d2l2c</groupId>
-  			<artifactId>user-mangement</artifactId>
+  			<artifactId>user-management</artifactId>
 			<version>${user.management.version}</version>
 		</dependency>
 		
