Add MariaDB dependency and config

--- a/hospital-management-data/src/main/resources/hospital-db.properties
+++ b/hospital-management-data/src/main/resources/hospital-db.properties
@@ -1,14 +1,20 @@
 # MySQL properties
-db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:8889/hospital_management?useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-db.username=root
-db.password=root
+hospital.db.driver=com.mysql.cj.jdbc.Driver
+hospital.db.url=jdbc:mysql://localhost:8889/hospital_management?useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+hospital.db.username=root
+hospital.db.password=root
+
+# ****************** SYNOLOGY MARIA BD CONFIG ******************
+#hospital.db.driver=org.mariadb.jdbc.Driver
+#hospital.db.url=jdbc:mariadb://10.0.0.214:3307/hospital_management
+#hospital.db.username=user
+#hospital.db.password=T706tUYZ7757ZU8p
 
 #Persistence
 persistence.xml.location=classpath:hospital-persistence.xml
 
 #Hibernate
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=validate
 hibernate.show_sql=true
 hibernate.batch.size=20
