--- a/hospital-management-data/pom.xml
+++ b/hospital-management-data/pom.xml
@@ -74,6 +74,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>6.0.5</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.mariadb.jdbc</groupId>
+		    <artifactId>mariadb-java-client</artifactId>
+		    <version>2.1.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
