--- a/hospital-management-data/src/main/resources/hospital-db.properties
+++ b/hospital-management-data/src/main/resources/hospital-db.properties
@@ -1,4 +1,4 @@
-# MySQL properties
+# ****************** MAMP MySQL DB CONFIG ******************
 hospital.db.driver=com.mysql.cj.jdbc.Driver
 hospital.db.url=jdbc:mysql://localhost:8889/hospital_management?useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 hospital.db.username=root
